// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlighterLegacy Component HighlighterLegacy renders 1`] = `
<div>
  <div />
</div>
`;

exports[`HighlighterLegacy Component HighlighterLegacy renders with highlight 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      {}
    </div>
    <div
      class="col"
    >
      {"extra":{},"highlighted":true,"input":"OLDDATA","data":"OLDDATA","readOnly":true}
    </div>
  </div>
</div>
`;

exports[`HighlighterLegacy Component HighlighterLegacy renders with highlight and inValidElement 1`] = `
<div>
  
</div>
`;
